added basic click functionality to all buttons

--- a/index.html
+++ b/index.html
@@ -9,9 +9,6 @@
 <body>
 
 <div class="container">
-    <p>
-      This component works exactly like the calculator you know. Click any number to start calculating!
-    </p>
     <div class="calculator">
       <div class="calculator__display">0</div>
 
@@ -36,5 +33,6 @@
       </div>
     </div>
   </div>
+    <script src="index.js"></script>
 </body>
   </html>
